deployments/pathweb/workloads/media-services/readarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  namespace: media-services
  labels:
    app.kubernetes.io/name: readarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  serviceName: readarr-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      nodeSelector:
        node-group: baldric
      # runtimeClassName: gvisor

      containers:
      - name: readarr
        image: linuxserver/readarr:latest
        ports:
        - containerPort: 8787
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: empty
          mountPath: /media
        - name: media
          mountPath: /media/Books
          subPath: Books
        resources:
          requests:
            cpu: "1"
            memory: "250Mi"
          limits:
            memory: "1Gi"
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: okinawa-downloads-smb
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media-smb
      - name: empty
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
